hphp/test/zend/good/tests-lang/bug23584.php
#!php
<?php

error_reporting(E_ALL);

echo $foo;

?>