hphp/test/zend/bad/ext/spl/tests/fileobject_setmaxlinelen_basic.php
<?php
$s = new SplFileObject( __FILE__ ); 
$s->setMaxLineLen( 3);  
echo $s->getCurrentLine();
?>